--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <h1>pagina principal</h1>
     <p>>bienvenido a la pagina principal. puedes volver a la pagina principal usando el enlace </p>
-    <a href="index.html">volver a la pagina principal</a>
+    <a href="pagina secundaria.html">volver a la pagina principal</a>
     <table border="50 px ">
     <tr>
         <th>NOMBRE</th>
