--- a/pagina secundaria.html
+++ b/pagina secundaria.html
@@ -17,7 +17,7 @@
 <body>
     <h1>pagina secundaria</h1>
     <p>bienvenido a la pagina secundaria. puedes volver a la pagina principal usando el enlace</p>
-    <a href="pagina secundaria.html">volver a la pagina secundaria</a>
+    <a href="index.html">volver a la pagina secundaria</a>
     
 </body>
 </html>
